@@ -4,8 +4,9 @@ CHANGE LOG
 
 2008-08-04 Warren L. DeLano <warren@delsci.com>
 
-	* fixed problems with out-of-order execution with pasted scripts
+	* added map_auto_expand_sym setting to optionally prevent expansion
 	
+	* fixed problems with out-of-order execution with pasted scripts
 	
 2008-07-28 Warren L. DeLano <warren@delsci.com>
 
